--- a/src/components/AddTask/AddTaskForm.css
+++ b/src/components/AddTask/AddTaskForm.css
@@ -7,20 +7,20 @@
 
 .input-addtask {
   outline: none;
-  background: white;
-  border: 2px solid #858488;
+  background: var(--bg-input);
+  border: 2px solid var(--border);
   padding: 0.5rem 1rem;
   width: 100%;
-  color: black;
+  color: var(--text-input);
   border-radius: 10px;
 }
 
 .btn-addtask {
-  background: #8758ff;
-  color: white;
+  background: var(--bg-btn);
+  color: var(--text-btn);
   padding: 0.55rem;
   cursor: pointer;
-  border: 1.5px solid #8758ff;
+  border: 1.5px solid var(--btn);
   border-radius: 10px;
 }
 
