--- a/src/components/ToDo/ToDo.css
+++ b/src/components/ToDo/ToDo.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #858488;
-  color: white;
+  background: var(--bg-list-todo);
+  color: var(--text-list);
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
