add local storage

--- a/src/components/AddTask/AddTaskForm.css
+++ b/src/components/AddTask/AddTaskForm.css
@@ -30,3 +30,13 @@
     gap: 16px;
   }
 }
+
+/* --bg: #ffffff;
+--bg-form: #d8d8f2;
+--bg-btn: #8758ff;
+--text-btn: #fff;
+--bg-list-todo: #858488;
+--text-input: #000000;
+--text-list: #fff;
+--bg-input: #ffffff;
+--border: #858488; */
