--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   --text-btn: #fff;
   --bg-list-todo: #858488;
   --text-input: #000000;
-  --text-list: #fff;
+  --text-list: #ffffff;
   --bg-input: #ffffff;
   --border: #858488;
 }
@@ -27,10 +27,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.h2 {
-  color: red;
 }
 
 .container {
